tests/snapshot/error/source_locations/expression/template/to_string_first_part.exp
TypeError: symbol cannot be converted to string
  ┌ source_locations/expression/template/to_string_first_part.js:1:4
  |
1 | `${Symbol.iterator} foo`;
  |    ^
Stack trace:
  at <global> (source_locations/expression/template/to_string_first_part.js:1:4)